assets/style.css
/* ... */
header .nav-menu-links {
  padding: 1rem 0;
  border-bottom: 1px solid;
  width: 100%;
  text-align: center;
  font-size: 1rem;
  font-weight: 500;
}

header .shopnowbtn1 {
  background-color: rgba(73, 81, 216, 0.21);
  padding: 1rem 3rem;
  border-radius: 25px;
  width: 100px;
  margin: 1rem 0;
}

header .shopnowbtn1 p {
  color: #fff;
}

@media screen and (min-width: 1050px) {
  header {
    /* Hiding the hamburger icon on larger screens */
    /* Ensuring that if the hamburger menu is active but
    the screen becomes larger, the display will 
    change to display items in a row instead of a column*/
  }
  header .navigation-menu {
    height: 70px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    border-bottom: 1px solid #e7e7e7;
  }
  header .main-navigation {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    -webkit-box-pack: end;
        -ms-flex-pack: end;
            justify-content: flex-end;
  }
  header .nav-menu {
    display: none !important;
  }
  header .main-navigation a {
    padding: 15px 17px;
  }
  header .hamburger-icon {
    display: none;
  }
  header #menu-toggle:checked + .main-navigation {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
  }
}

header .shopnowbtn {
  background-color: rgba(73, 81, 216, 0.21);
  padding: 1rem 3rem;
  border-radius: 25px;
}

header .shopnowbtn p {
  color: #fff;
  font-weight: 600;
}

@media screen and (max-width: 1050px) {
  header .shopnowbtn {
    display: none;
  }
}

.footer {
  background-color: #1e3c5c;
}

.footer__container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  max-width: 1240px;
  margin: 0 auto;
  padding: 5rem 20px;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.footer__container--left {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

.footer__container--left .links {
  color: #fff;
  padding-bottom: 1.5rem;
}

.footer__container--middle {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

.footer__container--middle p {
  color: #fff;
  padding-bottom: 1rem;
}

@media screen and (max-width: 768px) {
  .footer__container--middle p {
    padding-left: 1.5rem;
  }
}

.footer__container--middle .socialcontainer {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

.footer__container--middle .socialcontainer svg {
  padding-bottom: 0.5rem;
}

@media screen and (max-width: 768px) {
  .footer__container--middle .socialcontainer {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
  }
}

.footer__container--right {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

.footer__container--right .substext {
  color: #fff;
  font-weight: 600;
  font-size: 1.25rem;
  padding-bottom: 1rem;
}

.footer__container--right span {
  color: #fff;
  font-size: 0.8rem;
  padding-bottom: 1.3rem;
}


.footer__container--right .form-container .inputemail {
  width: 75%;
  font-size: 0.8rem;
  padding: .5rem;
  border: 0;
}

.footer__container--right .form-container .submitbtn {
  padding: 0.5rem;
  background-color: rgba(73, 81, 216, 0.41);
  border: 0;
  color: #fff;
  margin-left: -3px;
}
.footer__container--right .copyright{
  color: #fff;
  margin-top: 5rem;
}
.footer__container--right .copyright a {
  color: #fff;
}


@media screen and (max-width: 768px) {
  .footer__container {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
  }
  .footer__container--right .copyright{
    margin-top: 2.5rem;
  }
}

@font-face {
  font-family: "MetroThin";
  src: url(/fonts/Metropolis-Regular.otf) format("otf");
}

@font-face {
  font-family: "MetroBold";
  src: url(/fonts/Metropolis-Black.otf) format("otf");
  font-weight: 700;
}

@font-face {
  font-family: "MetroSemiB";
  src: url(./fonts/Metropolis-SemiBold.otf);
  font-weight: 600;
}

body {
  font-family: 'MetroThin',sans-serif;
  color: #083D5D;
  overflow-x: hidden;
}

section {
  max-width: 1920px;
  width: 100%;
  margin: 0 auto;
  overflow: hidden;
}

.flex {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
}

.flexcol {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

.reverse {
  -webkit-box-orient: horizontal;
  -webkit-box-direction: reverse;
      -ms-flex-direction: row-reverse;
          flex-direction: row-reverse;
}

a {
  text-decoration: none;
  color: #083D5D;
}

p, h1, h2, h3, h4, h5, h6, button {
  color: #083D5D;
}

html {
  scroll-behavior: smooth;
}
/*# sourceMappingURL=style.css.map */

.mobilebr{
  display: none;
}
/* ... */

